Actualizacion de modulo caja

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/factura.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/factura.html
@@ -1,89 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
     <title>Factura de Venta</title>
 </head>
-<style>
-    /* Estilos CSS */
-body {
-    font-family: Arial, sans-serif;
-    margin: 10px; /* Margen en todos los lados */
-    padding: 0;
-    width: 80mm; /* Ancho del papel */
-}
-/* Define los estilos para cada sección de la factura */
-header, section, footer {
-    padding: 5px;
-}
-/* Define los estilos para los elementos de texto */
-p, h1, h2, h3, table {
-    margin: 0;
-    padding: 0;
-}
-h1 {
-    font-size: 14pt;
-    text-align: center;
-    margin-bottom: 10px;
-}
-h2 {
-    font-size: 12pt;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-h3 {
-    font-size: 11pt; /* Ajustar el tamaño del total a pagar */
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-weight: bold; /* Hacer el total a pagar en negrita */
-}
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 10px;
-}
-th, td {
-    border: 1px solid #000;
-    padding: 3px;
-}
-/* Línea de corte */
-.corte {
-    border-top: 1px dashed #000;
-    margin-top: 10px; /* Espacio entre la línea de corte y el contenido */
-}
-/* Logo en el encabezado */
-.logo {
-    text-align: center;
-    margin-bottom: 10px;
-}
-.logo img {
-    max-width: 100px; /* Ajusta el tamaño del logo según sea necesario */
-}
-/* Estilos para las secciones */
-.seccion {
-    margin-bottom: 10px;
-    text-align: center; /* Centra el contenido de las secciones */
-}
-/* Estilos para las líneas entrecortadas */
-.linea-entrecortada {
-    border-bottom: 1px dashed #000;
-    margin-bottom: 5px;
-}
-/* Otros estilos */
-footer {
-    text-align: center;
-}
-</style>
+
 <body>
-    <!-- Encabezado -->
     <header>
         <div class="logo">
             <img src="/static/images/logo.png" alt="Logo">
         </div>
         <h1>Factura de Venta</h1>
-        <!-- Información de la compañia -->
         <div class="seccion">
             <h2>SALSAMENTARIA LA MEJOR</h2>
             <p>NIT: 00000000-0</p>
@@ -110,15 +40,21 @@ footer {
                     <th>Valor Unitario (COP)</th>
                 </tr>
             </thead>
-           <tbody>
-    {% for producto in productos %}
-    <tr>
-        <td>{{ producto['cantidad'] }}</td>
-        <td>{{ producto['descripcion'] }}</td>
-        <td>{{ producto['valor_unitario'] }}</td>
-    </tr>
-    {% endfor %}
-</tbody>
+            <tbody>
+                {% if productos %}
+                    {% for producto in productos %}
+                        <tr>
+                            <td>{{ producto['cantidad'] }}</td>
+                            <td>{{ producto['descripcion'] }}</td>
+                            <td>{{ producto['valor_unitario'] }}</td>
+                        </tr>
+                    {% endfor %}
+                {% else %}
+                    <tr>
+                        <td colspan="3">No hay productos disponibles.</td>
+                    </tr>
+                {% endif %}
+            </tbody>
         </table>
     </section>
 
@@ -126,13 +62,18 @@ footer {
 
     <section>
         <h2>Totales</h2>
-        <p>Total a Pagar: COP {{ productos[0]['total_a_pagar'] }}</p>
+        {% if productos %}
+            <p>Total a Pagar: COP {{ productos[0]['total_a_pagar'] }}</p>
+        {% else %}
+            <p>Total a Pagar: COP 0</p>
+        {% endif %}
         <div class="linea-entrecortada"></div>
     </section>
 
-    <!-- Pie de Página -->
+
     <footer>
         <h2>Gracias por su compra.</h2>
     </footer>
 </body>
+
 </html>
